# UnoProject

./: BotPlayer.cpp  BotPlayer.h  Card.h  HumanPlayer.cpp  HumanPlayer.h  Manager.cpp  Manager.h  NumberCard.cpp  NumberCard.h  Player.cpp  Player.h  card.cpp  main.cpp
.gitignore/: CMakeLists.txt  test.txt
